k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: namenology-service
  labels:
    app: namenology-web
spec:
  type: ClusterIP
  selector:
    app: namenology-web
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
